deployment_ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:  
      containers:
      - image: ollama/ollama:latest
        name: ollama
        ports:
        - containerPort: 11434
        resources:
          requests:
            cpu: 1000m
            memory: 2Gi
          limits: 
            cpu: 2000m
            memory: 3Gi
      - image: curlimages/curl:latest
        name: load-model
        command: ["/bin/sh", "-c"]
        args:
          - "sleep infinity"
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "(sleep 10; until curl -sS http://localhost:11434/ >/dev/null 2>&1; do sleep 5; done; curl -X POST http://localhost:11434/api/pull -H 'Content-Type: application/json' -d '{\"name\": \"llama3.2\"}' ) &"
        resources:
          limits:
            memory: 50Mi
            cpu: 25m
        livenessProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 11434
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 30
